--- a/src/list.html
+++ b/src/list.html
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse justify-content-lg-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">
+              <a class="nav-link" href="index.html">
                 Home
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="list.html">
+              <a class="nav-link active" aria-current="page" href="list.html">
                 Guest List
               </a>
             </li>
@@ -47,28 +47,122 @@
     </nav>
 
     <!-- Content -->
-    <main class="d-flex justify-content-center align-items-center py-8 mt-14 flex-grow-1 overflow-hidden">
-      <div class="container-md">
-        <div class="row row-cols-1">
+    <main class="d-block py-8 mt-14 flex-grow-1 overflow-hidden">
+      <div class="container-sm">
+        <div class="row">
           <div class="col">
 
-            <div class="d-block text-center px-6 mx-md-6 m-0">
-              <h4 class="fs-4xl fw-medium text-black p-0 mb-4">
-                Bring Your Guestbook to Life
-              </h4>
-              <p class="fs-base fw-normal text-black text-opacity-60 p-0 mb-8">
-                My Digital Guestbook transforms the guestbook experience for the joy and convenience of the planners, hosts and guests. Whether you're planning a wedding, a fundraiser, a graduation, a sorority mixer, a birthday party, or any other gathering, create a guestbook that captures the people that matter.
-              </p>
-              <a href="list.html" class="btn btn-primary btn-lg text-uppercase text-white fs-5 fw-medium rounded-start-pill rounded-end-pill" role="button">
-                Let's Get Started
-              </a>
-            </div>
+            <div class="card overflow-hidden">
+              <div class="card-body p-0 m-0">
 
+                <div class="container-fluid border-bottom">
+                  <div class="row row-cols-2 align-items-center h-16">
+                    <div class="col">
+                      <div class="d-flex justify-content-start">
+                        <h6 class="d-block p-0 m-0 fs-xl fw-bold text-black text-opacity-87 text-capitalize text-truncate">
+                          Guest List
+                        </h6>
+                      </div>
+                    </div>
+
+                    <div class="col">
+                      <div class="d-flex justify-content-end">
+                        <a href="create.html" class="btn btn-primary rounded-start-pill rounded-end-pill" role="button">
+                          Create New
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="d-block overflow-x-auto text-nowrap">
+                  <table class="table table-hover p-0 m-0">
+                    <thead>
+                      <tr>
+                        <th scope="col" class="text-center">#</th>
+                        <th scope="col">Full Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone Number</th>
+                        <th scope="col">Gender</th>
+                        <th scope="col">Address</th>
+                        <th scope="col"></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row" class="text-center">1</th>
+                        <td>Mark Otto</td>
+                        <td>mdo@gmail.com</td>
+                        <td>(641) 643-3017</td>
+                        <td>Male</td>
+                        <td>Harrisburg, PA 17116</td>
+                        <td>
+                          <div class="hstack gap-4 justify-content-center">
+                            <a href="edit.html" class="d-inline-block focus-ring border-0 rounded-2 link-warning link-opacity-100 text-decoration-none" role="button">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="d-block bi bi-pencil-square" viewBox="0 0 16 16">
+                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                              </svg>
+                            </a>
+                            <a href="#" class="d-inline-block focus-ring border-0 rounded-2 link-danger link-opacity-100 text-decoration-none" role="button">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="d-block bi bi-trash-fill" viewBox="0 0 16 16">
+                                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
+                              </svg>
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <div class="container-fluid border-top-0">
+                  <div class="row row-cols-1 align-items-center h-16">
+                    <div class="col">
+
+                      <!-- Pagination -->
+                      <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-end p-0 m-0">
+                          <li class="page-item">
+                            <a class="page-link" href="#">
+                              Previous
+                            </a>
+                          </li>
+                          <li class="page-item active">
+                            <a class="page-link" href="#">
+                              1
+                            </a>
+                          </li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">
+                              2
+                            </a>
+                          </li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">
+                              3
+                            </a>
+                          </li>
+                          <li class="page-item">
+                            <a class="page-link" href="#">
+                              Next
+                            </a>
+                          </li>
+                        </ul>
+                      </nav>
+
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+            
           </div>
         </div>
-      </div>      
+      </div>
     </main>
-    
+
     <!-- Footer -->
     <footer class="d-block p-0 m-0">
       <div class="container-fluid">
